Implement real extraction via Puppeteer

--- a/server/.env.example
+++ b/server/.env.example
@@ -8,3 +8,17 @@ EXTRACTION_MODE=simulation
 
 # Ensure simulation returns at least this many variants (rows)
 SIMULATION_TARGET_VARIANTS=850
+
+# Puppeteer / real extraction knobs
+# Limit how many product pages to process (applies to Shopify feed + sitemap discovery)
+MAX_PRODUCTS=50
+PUPPETEER_CONCURRENCY=2
+PUPPETEER_NAV_TIMEOUT_MS=30000
+PUPPETEER_USER_AGENT=
+
+# Shopify feed paging protection
+SHOPIFY_MAX_PAGES=20
+LOW_STOCK_THRESHOLD=10
+
+# Sitemap discovery
+MAX_SITEMAPS=10
