Add Shopify + sitemap-based Puppeteer extraction

--- a/server/.env.example
+++ b/server/.env.example
@@ -15,6 +15,7 @@ MAX_PRODUCTS=50
 PUPPETEER_CONCURRENCY=2
 PUPPETEER_NAV_TIMEOUT_MS=30000
 PUPPETEER_USER_AGENT=
+PUPPETEER_EXECUTABLE_PATH=
 
 # Shopify feed paging protection
 SHOPIFY_MAX_PAGES=20
