Shopify variant discovery via title split

--- a/server/.env.example
+++ b/server/.env.example
@@ -20,6 +20,9 @@ PUPPETEER_EXECUTABLE_PATH=
 # Shopify feed paging protection
 SHOPIFY_MAX_PAGES=20
 LOW_STOCK_THRESHOLD=10
+# Variant discovery: group "Title — Variant" single-default products into a single product with many variants.
+# Values: off | auto | title
+SHOPIFY_VARIANT_DISCOVERY=auto
 
 # Sitemap discovery
 MAX_SITEMAPS=10
