--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,7 @@
 PORT=3001
-# Comma-separated list of allowed origins (e.g. http://localhost:3000,http://localhost:3001)
+# Comma-separated list of allowed origins (no trailing slash).
+# Supports full origins (https://example.com), hostnames (example.com), host:port (localhost:3000),
+# wildcard suffixes (*.vercel.app), or "*" to allow all.
 # Leave empty to allow all origins (dev-friendly; tighten for production).
 CORS_ORIGIN=
 
