feat(server): proxy ingredient harvester API

--- a/server/.env.example
+++ b/server/.env.example
@@ -8,6 +8,10 @@ CORS_ORIGIN=
 # simulation | puppeteer
 EXTRACTION_MODE=simulation
 
+# Ingredient Harvester upstream (used by /api/ingredient-harvester proxy)
+INGREDIENT_HARVESTER_BASE_URL=http://localhost:8008
+INGREDIENT_HARVESTER_PROXY_TIMEOUT_MS=60000
+
 # Ensure simulation returns at least this many variants (rows)
 SIMULATION_TARGET_VARIANTS=850
 
