--- a/client/.env.local.example
+++ b/client/.env.local.example
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_API_BASE_URL=http://localhost:3001
-NEXT_PUBLIC_INGREDIENT_HARVESTER_BASE_URL=http://localhost:8008
+# Optional override (defaults to ${NEXT_PUBLIC_API_BASE_URL}/api/ingredient-harvester):
+# NEXT_PUBLIC_INGREDIENT_HARVESTER_BASE_URL=http://localhost:3001/api/ingredient-harvester
