--- a/ingredient-harvester/requirements.txt
+++ b/ingredient-harvester/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.30.6
 python-multipart==0.0.9
 pydantic>=2.11.7,<3
 sqlalchemy==2.0.38
+psycopg[binary]==3.2.6
 pandas==2.2.3
 openpyxl==3.1.5
 requests==2.32.3
