Harden extract timeouts and remove external placeholder dependency

--- a/server/.env.example
+++ b/server/.env.example
@@ -17,9 +17,11 @@ SIMULATION_TARGET_VARIANTS=850
 
 # Puppeteer / real extraction knobs
 # Limit how many product pages to process (applies to Shopify feed + sitemap discovery)
-MAX_PRODUCTS=50
-PUPPETEER_CONCURRENCY=2
-PUPPETEER_NAV_TIMEOUT_MS=30000
+# Keep this low in production to avoid edge/proxy timeouts on long crawls.
+MAX_PRODUCTS=10
+PUPPETEER_CONCURRENCY=3
+PUPPETEER_NAV_TIMEOUT_MS=12000
+PUPPETEER_FETCH_TIMEOUT_MS=12000
 PUPPETEER_USER_AGENT=
 PUPPETEER_EXECUTABLE_PATH=
 
