--- a/server/.env.example
+++ b/server/.env.example
@@ -22,6 +22,8 @@ MAX_PRODUCTS=6
 PUPPETEER_CONCURRENCY=3
 PUPPETEER_NAV_TIMEOUT_MS=8000
 PUPPETEER_FETCH_TIMEOUT_MS=8000
+PUPPETEER_LAUNCH_TIMEOUT_MS=15000
+PUPPETEER_SCRAPE_TIMEOUT_MS=45000
 PUPPETEER_USER_AGENT=
 PUPPETEER_EXECUTABLE_PATH=
 
