Increase default SKU target and add candidate reserve for failed pages

--- a/server/.env.example
+++ b/server/.env.example
@@ -18,12 +18,14 @@ SIMULATION_TARGET_VARIANTS=850
 # Puppeteer / real extraction knobs
 # Limit how many product pages to process (applies to Shopify feed + sitemap discovery)
 # Keep this low in production to avoid edge/proxy timeouts on long crawls.
-MAX_PRODUCTS=6
+MAX_PRODUCTS=10
+# Reserve extra candidate URLs to compensate for occasional scrape failures.
+PRODUCT_URL_RESERVE=4
 PUPPETEER_CONCURRENCY=3
 PUPPETEER_NAV_TIMEOUT_MS=8000
 PUPPETEER_FETCH_TIMEOUT_MS=8000
 PUPPETEER_LAUNCH_TIMEOUT_MS=15000
-PUPPETEER_SCRAPE_TIMEOUT_MS=45000
+PUPPETEER_SCRAPE_TIMEOUT_MS=60000
 PUPPETEER_USER_AGENT=
 PUPPETEER_EXECUTABLE_PATH=
 
