Add batched extraction flow for full-catalog crawling

--- a/server/.env.example
+++ b/server/.env.example
@@ -16,9 +16,12 @@ INGREDIENT_HARVESTER_PROXY_TIMEOUT_MS=60000
 SIMULATION_TARGET_VARIANTS=850
 
 # Puppeteer / real extraction knobs
-# Limit how many product pages to process (applies to Shopify feed + sitemap discovery)
-# Keep this low in production to avoid edge/proxy timeouts on long crawls.
+# Batch crawl size for one HTTP request. Keep this low to avoid edge/proxy timeouts.
+BATCH_LIMIT=10
+# Backward-compatible fallback for batch size if BATCH_LIMIT is not set.
 MAX_PRODUCTS=10
+# Upper bound for total products discoverable across batches.
+MAX_TOTAL_PRODUCTS=500
 # Reserve extra candidate URLs to compensate for occasional scrape failures.
 PRODUCT_URL_RESERVE=4
 PUPPETEER_CONCURRENCY=3
